--- a/css/style.css
+++ b/css/style.css
@@ -83,13 +83,14 @@
   margin: 82px auto;
 }
 .section2-title1 {
+  font-family: "BPG Nino Mtavruli Book";
   color: #5863f8;
   font-size: 14px;
 }
 
 .section2-title2 {
+  font-family: "BPG Nino Mtavruli Book";
   width: 465px;
-
   color: black;
   font-size: 40px;
 }
